# kl-tools

./: .gitignore  INTENSITY_COMPARISON.md  LICENSE  README.md  environment.yaml  environment.yml  kltools.yaml  makefile  setup.py
data/: simudata_1_noisy.fits  simudata_2_noisy.fits  simudata_3_noisy.fits  simufiber_1.fits  simufiber_2.fits  simufiber_3.fits
kl_tools/: basis.py  coordinates.py  cube.py  datavector.py  emission.py  galaxy_fitter.py  grism.py  grism_likelihood.py  hpc_massive_run.slurm  intensity.py  interloper_mask.py  jwst_run.sh  likelihood.py  mcmc.py  metropolis.py  mocks.py  muse.py  muse_datacube.py  numba_transformation.py  ocelote_massive_run.slurm  parameters.py  plotting.py  priors.py  psf.py  puma_massive_run.slurm  shear_estimator.py  simulations.py  spectrum.py  test_alt_likelihood_by_param.py  test_beta.py  test_beta_sim.py  test_class_emcee.py  test_compare_alt_solution.py  test_fiber_mcmc_run.py  test_grism_mcmc_run.py  test_intensity.py  test_jwst_mcmc_run.py  test_likelihood_by_param.py  test_mcmc_func_run.py  test_mcmc_run.py  (+10 more)
kl_tools/grism_modules/src/: .gitignore  CMakeLists.txt  grism_module.cpp  setup.py  test_grism.cpp
kl_tools/src/: CMakeLists.txt  grism_module.cpp  setup.py
notebooks/: TNG2Grism.ipynb  basis-transorm.ipynb  compare-basis-funcs.ipynb  compare-sols-basis.ipynb  compare-sols.ipynb  compare-to-tfcube.ipynb  compare-vmap-to-tfcube-Copy1.ipynb  corner-plot.ipynb  examine-basis-truth.ipynb  examine-chains.ipynb  examine-sersiclets.ipynb  galaxy_fitter.ipynb  getting_started.ipynb  hpc_reduce_chains.slurm  muse-compare-basis-funcs.ipynb  reduce_chains.py  sersiclets.ipynb  shapelets-iterate.ipynb  test-mcmc.ipynb  test-psf-basis.ipynb  ultranest-outputs.ipynb
scripts/: debug_fiber_mcmc_run.py  install.sh  joint_fit.py  stellar_mass_sed_fitting.py  test_beta.py  test_compare_alt_solution.py  test_continuum.py  test_fiber_yaml.py  test_global_optimizer.py  (+20 more)
(+70 files in other folders)
